# ROS_2_VESC_Node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dockerfile
src/: dchrono.h
src/minimal_chatter/: CMakeLists.txt  lambda_pub.cpp  lambda_sub.cpp  package.xml
src/teleop_twist_joy/: CMakeLists.txt
src/teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy.h
src/teleop_twist_joy/launch/: teleop-launch.py
src/teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy.cpp
src/teleop_twist_wiimote/: CMakeLists.txt  package.xml
src/teleop_twist_wiimote/include/teleop_twist_wiimote/: teleop_twist_wiimote.hpp
src/teleop_twist_wiimote/src/: teleop_node.cpp  teleop_twist_wiimote.cpp
src/vesc_node/: CMakeLists.txt  main.cpp  package.xml  publisher_node.cpp  publisher_node.hpp  subscriber_node.cpp  subscriber_node.hpp  vesc_node.cpp  vesc_node.h  vesc_node.hpp
src/vesc_node/inc/: Vesc.h  commands.h  datatypes.h  packet.h  utils.h
src/vesc_node/inc/libserial/: SerialPort.h  SerialPortConstants.h
src/vesc_node/lib/: libVESC.so.0.0.1  libserial.so.1.0.0
src/vesc_node/lib/vesc/: Vesc.cpp  commands.cpp  packet.cpp
src/vesc_node/motor_msgs/: CMakeLists.txt
src/vesc_node/motor_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/vesc_node/motor_msgs/install/motor_msgs/include/motor_msgs/msg/: motor_data.hpp  motor_data__rosidl_typesupport_fastrtps_cpp.hpp  motor_data__struct.h  motor_data__type_support.c  motor_data__type_support.cpp  rosidl_typesupport_fastrtps_c__visibility_control.h
src/vesc_node/motor_msgs/install/motor_msgs/share/motor_msgs/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/vesc_node/motor_msgs/install/motor_msgs/share/motor_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  motor_msgsConfig.cmake
src/vesc_node/motor_msgs/log/: latest_build
src/vesc_node/motor_msgs/msg/: MotorData.msg
src/wiimote/: CMakeLists.txt  package.xml
src/wiimote/msg/: State.msg
