<?xml version="1.0"?>
<package format="2">
  <name>teleop_twist_wiimote</name>
  <version>0.0.1</version>
  <description>Generic wiimote teleop for twist openrover.</description>
  <maintainer email="king.seth@gmail.com">Seth King</maintainer>

  <license>BSD</license>

  <url type="website">http://openrover.com</url>
  <author email="king.seth@gmail.com">Seth King</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>wiimote</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
