<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>vesc_node</name>
  <version>0.0.1</version>
  <description>  pub and sub for vesc communication
  </description>
  <maintainer email="king.seth@gmail.com">Seth M King</maintainer>
  <license>GNU General Public License v3.0</license>
  <author>Seth M King</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>motor_msgs</build_depend>

  <exec_depend>motor_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
